--- a/src/index.html
+++ b/src/index.html
@@ -8,13 +8,12 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="./assets/logo.png">
-  
+
 </head>
 
 <body>
   <app-root></app-root>
-  <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB3GhrdoDtrazqh11RzOizMth6g_jNM404&callback=initMap">
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB3GhrdoDtrazqh11RzOizMth6g_jNM404">
   </script>
 </body>
 
