--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>LetsWork</title>
   <base href="/">
-
+  <meta name="google-signin-client_id" content="174746645449-5cqcgnkrcmkgv4afkildajult2j4454a.apps.googleusercontent.com">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="./assets/logo.png">
 
