modification in venues module

--- a/src/index.html
+++ b/src/index.html
@@ -12,9 +12,10 @@
 </head>
 
 <body>
-  <app-root></app-root>
+  <app-root>
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB3GhrdoDtrazqh11RzOizMth6g_jNM404">
   </script>
+  </app-root>
 </body>
 
 </html>
